# nixxing

./: .gitignore  compile_commands.json  flake.nix
src/: CMakeLists.txt  main.cpp
